test-output/src/tests/snapshots/test_output__tests__snapshots__echo_bool.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo True
  echo False
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
True
[90msrc/main.gleam:3[39m
False
