test-output/src/tests/snapshots/test_output__tests__snapshots__echo_charlist.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo [72, 101, 108, 108, 111, 44, 32, 74, 111, 101, 33]
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
charlist.from_string("Hello, Joe!")
