test-output/src/tests/snapshots/test_output__tests__snapshots__echo_dict.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
import gleam/dict

pub fn main() {
  echo dict.new()
  echo dict.from_list([#(1, "hello"), #(2, "world!")])
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:4[39m
dict.from_list([])
[90msrc/main.gleam:5[39m
dict.from_list([#(1, "hello"), #(2, "world!")])
