test-output/src/tests/snapshots/test_output__tests__snapshots__echo_function.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo fn(n) { n + 1 }
  echo private
}

fn private() {
  1
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
//fn(a) { ... }
[90msrc/main.gleam:3[39m
//fn() { ... }
