test-output/src/tests/snapshots/test_output__tests__snapshots__echo_importing_module_named_inspect.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
import inspect

pub fn main() {
  echo inspect.x
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:4[39m
Nil
