test-output/src/tests/snapshots/test_output__tests__snapshots__echo_int.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo 1
  echo 2
  echo 100_000
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
1
[90msrc/main.gleam:3[39m
2
[90msrc/main.gleam:4[39m
100000
