test-output/src/tests/snapshots/test_output__tests__snapshots__echo_list.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo []
  echo [1, 2, 3]
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
[]
[90msrc/main.gleam:3[39m
[1, 2, 3]
