test-output/src/tests/snapshots/test_output__tests__snapshots__echo_singleton.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
import thing

pub fn main() {
  echo #(1, singleton(), singleton())
  Nil
}

@external(javascript, "./main_ffi.mjs", "singleton")
fn singleton() -> thing.Thing {
  thing.Thing
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:4[39m
#(1, Thing, Thing)
