test-output/src/tests/snapshots/test_output__tests__snapshots__echo_tuple.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo #()
  echo #(True, 1, "hello")
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
#()
[90msrc/main.gleam:3[39m
#(True, 1, "hello")
