test-output/src/tests/snapshots/test_output__tests__snapshots__echo_with_message.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  let message = "message"

  echo 1 as "message1"

  1
  |> echo as { message <> "2" }
  |> fn(n) { n + 1 }
  |> echo as "message3"
}


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:4[39m message1
1
[90msrc/main.gleam:7[39m message2
1
[90msrc/main.gleam:9[39m message3
2
